# mdbase-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
editors/vscode/: .vscodeignore  package-lock.json  package.json
editors/vscode/src/: extension.ts
src/: body_links.rs  code_actions.rs  collection_utils.rs  commands.rs  completions.rs  diagnostics.rs  document_links.rs  file_index.rs  goto.rs  hover.rs  link_resolve.rs  main.rs  references.rs  server.rs  state.rs  symbols.rs  text.rs
