[package]
name = "mdbase-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
mdbase = { git = "https://github.com/callumalpass/mdbase-rs" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dashmap = "6"
ropey = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
